--- a/index.html
+++ b/index.html
@@ -63,14 +63,14 @@
             <li>HTML</li>
             <li>CSS</li>
             <li>JavaScript</li>
-            <li>NodeJS</li>
+            <li>NodeJS  (Beginner)</li>
             <li>Python</li>
             <li>Data Analysis with Pandas</li>
             <li>Visualizations using Seaborn , Matplotlib and Plotly</li>
             <li>PowerBI</li>
             <li>Looker Studio</li>
             <li>Machine Learning</li>
-            <li>Computer Vision with Python</li>
+            <li>Computer Vision with Python (Beginner)</li>
 
           </ul>
 
@@ -120,8 +120,7 @@
             <div class="work__text">
               <h3>Calculator</h3>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod,
-                eius.
+                Calculator for doing basic calculations
               </p>
               <ul class="work__list">
                 <li>HTML</li>
@@ -168,6 +167,9 @@
               <img src="color_detection.PNG" class="work__image" alt="Project 3" />
             </div>
           </div>
+          <p class="work__list">
+            For more projects visit my <a href="https://aayan-ali-hashim.github.io/-Portfolio_Projects/">Portfolio Projects Webpage</a>
+          </p>
         </div>
       </div>
     </section>
@@ -180,8 +182,8 @@
         <div>
           <!-- Add logos of the clients or companies you'have worked with. -->
           <img src="review1.PNG" class="clientreview" />
-          <img src="review2.PNG" alt="review" class="clientreview" />
-          <img src="review3.PNG" alt="review" class="clientreview" />
+          <img src="review2.PNG" alt="review" class="clientreview"/>
+          <img src="review3.PNG" alt="review" class="clientreview"/>
         </div>
       </div>
     </section>
@@ -198,8 +200,8 @@
               Hello, I'm Aayan Ali. I enjoy blogging, programming, and teaching. 
               I started learning Python in 2021 and
               became quite proficient. In 2022, I began exploring Data Science. 
-              Since late 2023, I've been learning
-              about AI and chatbot development. Currently, I'm busy teaching Python to both kids and adults.
+              Currently, I'm busy teaching Python to both kids and adults.
+              I am learning Web development from Bait Us Salam Tech Park.
             </p>
             <!-- Provide a link to your resume -->
             <a href="Aayan Ali (3)-1.pdf" class="btn">My Resume</a>
