--- a/index.html
+++ b/index.html
@@ -203,6 +203,7 @@
               Currently, I'm busy teaching Python to both kids and adults.
               I am learning Web development from Bait Us Salam Tech Park.
             </p>
+            <p>I am also running Pakistan's First Python Community on Facebook <a href="https://www.facebook.com/share/g/L7jQLZNWht7KwsQ6/">click here</a></p>
             <!-- Provide a link to your resume -->
             <a href="Aayan Ali (3)-1.pdf" class="btn">My Resume</a>
           </div>
