--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <!-- Put your site title here -->
   <title>
-    Aayan Ali | A Web Developer based in Lahore, Pakistan.
+    Aayan Ali | A Web Developer based in Karachi, Pakistan.
   </title>
 
   <meta name="description" content="Add small description of yourslef.">
